# clang-wrapper

./: CMakeLists.txt  try_compile.py
src/: main.cpp  sha256.cpp
